	PR symtab/14931: 	* psymtab.c (struct psymtab_state): New. 	(discard_psymtabs_upto, make_cleanup_discard_psymtabs): New 	functions. 	* psympriv.h (make_cleanup_discard_psymtabs): Declare. 	* dwarf2read.c (dwarf2_build_psymtabs): Catch exceptions. gdb/testsuite 	* gdb.dwarf2/dw2-error.exp: New file. 	* gdb.dwarf2/dw2-error.c: New file. 	* gdb.dwarf2/dw2-error.S: New file.